Veldra Webpage Redesign in Accomodation with V1.0.0 pre-release update part 5

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=11">
-  <script src="/assets/script.js?v=11" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=12">
+  <script src="/assets/script.js?v=12" defer></script>
 </head>
 <body>
 
@@ -89,12 +89,14 @@
                 <div class="chip-pin-value">34</div>
                 <div class="chip-pin-label">GatewayReason codes</div>
               </div>
+              <div class="chip-trace"></div>
             </div>
             <div class="chip-pin">
               <div>
                 <div class="chip-pin-value">50<span style="font-size:16px;opacity:.6;">ms</span></div>
                 <div class="chip-pin-label">Verdict timeout</div>
               </div>
+              <div class="chip-trace"></div>
             </div>
           </div>
 
@@ -111,12 +113,14 @@
                 <div class="chip-pin-value">3</div>
                 <div class="chip-pin-label">Deployment modes</div>
               </div>
+              <div class="chip-trace"></div>
             </div>
             <div class="chip-pin">
               <div>
                 <div class="chip-pin-value">2</div>
                 <div class="chip-pin-label">Share lifecycle events</div>
               </div>
+              <div class="chip-trace"></div>
             </div>
           </div>
 
