--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=12">
-  <script src="/assets/script.js?v=12" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=13">
+  <script src="/assets/script.js?v=13" defer></script>
 </head>
 <body>
 
@@ -182,12 +182,24 @@
           </defs>
 
           <!-- Connection lines -->
-          <line x1="155" y1="90" x2="245" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
-          <line x1="415" y1="90" x2="505" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
-          <line x1="695" y1="90" x2="785" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
+          <line id="line1" x1="155" y1="90" x2="245" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
+          <line id="line2" x1="415" y1="90" x2="505" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
+          <line id="line3" x1="695" y1="90" x2="785" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
 
-          <!-- Bidirectional line for gateway ↔ verifier -->
-          <line x1="415" y1="90" x2="505" y2="90" stroke="url(#glow-line-grad)" stroke-width="2" marker-end="url(#arrow)" opacity=".7"/>
+          <!-- Data packets traveling along lines -->
+          <!-- Data packets traveling along connection lines -->
+          <circle r="4" fill="#e8b060" opacity="0">
+            <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.08;0.85;1" dur="2.8s" repeatCount="indefinite"/>
+            <animateMotion path="M155,90 L245,90" dur="2.8s" repeatCount="indefinite"/>
+          </circle>
+          <circle r="4" fill="#e8b060" opacity="0">
+            <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.08;0.85;1" dur="2.8s" repeatCount="indefinite" begin="0.9s"/>
+            <animateMotion path="M415,90 L505,90" dur="2.8s" repeatCount="indefinite" begin="0.9s"/>
+          </circle>
+          <circle r="4" fill="#e8b060" opacity="0">
+            <animate attributeName="opacity" values="0;1;1;0" keyTimes="0;0.08;0.85;1" dur="2.8s" repeatCount="indefinite" begin="1.8s"/>
+            <animateMotion path="M695,90 L785,90" dur="2.8s" repeatCount="indefinite" begin="1.8s"/>
+          </circle>
 
           <!-- Protocol labels on lines -->
           <text x="200" y="78" fill="#d4943c" font-size="10" text-anchor="middle" opacity=".7">Noise NX</text>
@@ -200,7 +212,7 @@
           <text x="92" y="105" fill="rgba(226,232,240,0.4)" font-size="10" text-anchor="middle">SV2 client</text>
 
           <!-- Node: Gateway (highlighted) -->
-          <rect x="245" y="50" width="170" height="80" rx="12" fill="rgba(212,148,60,0.06)" stroke="#d4943c" stroke-width="1.5" filter="url(#node-glow)"/>
+          <rect class="arch-node-gw" x="245" y="50" width="170" height="80" rx="12" fill="rgba(212,148,60,0.06)" stroke="#d4943c" stroke-width="1.5" filter="url(#node-glow)"/>
           <rect x="245" y="50" width="170" height="3" rx="1" fill="url(#glow-line-grad)"/>
           <text x="330" y="82" fill="#e8b060" font-size="14" font-weight="700" text-anchor="middle">sv2-gateway</text>
           <text x="330" y="102" fill="rgba(226,232,240,0.5)" font-size="10" text-anchor="middle">ReserveGrid OS</text>
