--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="ReserveGrid OS is a Stratum V2 miner-facing gateway with Noise NX transport, prevhash fail-closed switching, two-event share lifecycle, and 34 machine-readable reason codes.">
   <meta name="theme-color" content="#080e1a">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="canonical" href="https://veldra.org/">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
@@ -20,8 +22,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=13">
-  <script src="/assets/script.js?v=13" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=14">
+  <script src="/assets/script.js?v=14" defer></script>
 </head>
 <body>
 
@@ -51,6 +53,19 @@
   <!-- ── Hero ────────────────────────────────── -->
   <section class="hero-dark">
     <div class="hero-grid"></div>
+    <div class="hero-ring">
+      <div class="hero-ring-outer">
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-tick"></span>
+        <span class="hero-ring-dot"></span>
+      </div>
+    </div>
     <div class="container">
       <div class="hero-inner fade-up">
         <div class="hero-label">
@@ -426,5 +441,8 @@
     </div>
   </footer>
 
+  <button class="scroll-top" aria-label="Scroll to top">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><path d="M18 15l-6-6-6 6"/></svg>
+  </button>
 </body>
 </html>
