--- a/observe/index.html
+++ b/observe/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Live gateway monitoring dashboard. Share events, verdict analytics, reason code breakdown, and policy state for your SV2 deployment.">
   <meta name="theme-color" content="#080e1a">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/brand/favicon-16.png">
@@ -19,8 +21,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=13">
-  <script src="/assets/script.js?v=13" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=14">
+  <script src="/assets/script.js?v=14" defer></script>
 
   <style>
     /* ── Observe-specific styles ────────────────── */
@@ -2192,5 +2194,8 @@
   })();
   </script>
 
+  <button class="scroll-top" aria-label="Scroll to top">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><path d="M18 15l-6-6-6 6"/></svg>
+  </button>
 </body>
 </html>
