--- a/privacy/index.html
+++ b/privacy/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Veldra privacy policy: what data we collect, how we use it, and your rights.">
   <meta name="theme-color" content="#080e1a">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="canonical" href="https://veldra.org/privacy/">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
@@ -19,8 +21,8 @@
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=13">
-  <script src="/assets/script.js?v=13" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=14">
+  <script src="/assets/script.js?v=14" defer></script>
 </head>
 <body>
 
