--- a/product/index.html
+++ b/product/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Miner-facing Stratum V2 gateway with Noise NX, template verification, prevhash fail-closed switching, and two-event share lifecycle. 34 reason codes, 51 config keys, 3 deployment modes.">
   <meta name="theme-color" content="#080e1a">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="canonical" href="https://veldra.org/product/">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
@@ -20,8 +22,8 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=13">
-  <script src="/assets/script.js?v=13" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=14">
+  <script src="/assets/script.js?v=14" defer></script>
 </head>
 <body>
 
@@ -46,6 +48,8 @@
       </div>
     </div>
   </nav>
+
+  <div class="container"><nav class="breadcrumb" aria-label="Breadcrumb"><a href="/">Home</a><span class="sep">/</span><span class="current">Product</span></nav></div>
 
   <!-- ── Hero ──────────────────────────────────── -->
   <section class="hero-dark">
@@ -598,5 +602,8 @@ max_workers_per_channel = 1000           # Limit concurrent workers per channel<
     </div>
   </footer>
 
+  <button class="scroll-top" aria-label="Scroll to top">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><path d="M18 15l-6-6-6 6"/></svg>
+  </button>
 </body>
 </html>
