--- a/404.html
+++ b/404.html
@@ -12,7 +12,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/brand/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/brand/favicon-16.png">
 
-  <link rel="stylesheet" href="/assets/style.css?v=14">
+  <link rel="stylesheet" href="/assets/style.css?v=15">
+  <script src="/assets/i18n.js?v=15" defer></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
 </head>
 <body>
 
@@ -23,13 +25,18 @@
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
         <div class="navlinks">
-          <a href="/">Home</a>
-          <a href="/product/">Product</a>
-          <a href="/docs/">Docs</a>
-          <a href="/about/">About</a>
+          <a href="/" data-i18n="nav.home">Home</a>
+          <a href="/product/" data-i18n="nav.product">Product</a>
+          <a href="/docs/" data-i18n="nav.docs">Docs</a>
+          <a href="/about/" data-i18n="nav.about">About</a>
         </div>
         <div class="nav-actions">
-          <a href="/observe/" class="btn btn-primary btn-sm">Observe</a>
+          <div class="lang-toggle">
+            <button class="lang-btn active" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="es">ES</button>
+            <button class="lang-btn" data-lang="zh">中</button>
+          </div>
+          <a href="/observe/" class="btn btn-primary btn-sm" data-i18n="nav.observe">Observe</a>
         </div>
         <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18M3 6h18M3 18h18"/></svg>
@@ -42,13 +49,13 @@
     <div class="hero-grid"></div>
     <div class="container" style="text-align:center;">
       <div class="hero-inner fade-up" style="padding:40px 0;">
-        <div style="font-family:var(--mono);font-size:clamp(80px,12vw,140px);font-weight:900;letter-spacing:-.04em;color:var(--amber);line-height:1;margin-bottom:16px;text-shadow:0 0 60px rgba(212,148,60,.2);">404</div>
-        <p class="hero-sub" style="max-width:480px;margin:0 auto 32px;">
+        <div style="font-family:var(--mono);font-size:clamp(80px,12vw,140px);font-weight:900;letter-spacing:-.04em;color:var(--amber);line-height:1;margin-bottom:16px;text-shadow:0 0 60px rgba(212,148,60,.2);" data-i18n="p404.title">404</div>
+        <p class="hero-sub" style="max-width:480px;margin:0 auto 32px;" data-i18n="p404.sub">
           This route returned no match. The page you requested does not exist or has been moved.
         </p>
         <div class="hero-actions" style="justify-content:center;">
-          <a href="/" class="btn btn-glow">Back to home</a>
-          <a href="/docs/" class="btn btn-outline">Read the docs</a>
+          <a href="/" class="btn btn-glow" data-i18n="btn.back_home">Back to home</a>
+          <a href="/docs/" class="btn btn-outline" data-i18n="btn.docs">Read the docs</a>
         </div>
       </div>
     </div>
@@ -61,14 +68,14 @@
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </div>
         <div class="footer-legal">
-          <a href="/privacy/">Privacy</a>
-          <a href="/terms/">Terms</a>
-          <a href="/disclaimer/">Disclaimer</a>
+          <a href="/privacy/" data-i18n="footer.privacy">Privacy</a>
+          <a href="/terms/" data-i18n="footer.terms">Terms</a>
+          <a href="/disclaimer/" data-i18n="footer.disclaimer">Disclaimer</a>
         </div>
       </div>
     </div>
   </footer>
 
-  <script src="/assets/script.js?v=14" defer></script>
+  <script src="/assets/script.js?v=15" defer></script>
 </body>
 </html>
