--- a/observe/index.html
+++ b/observe/index.html
@@ -21,8 +21,10 @@
   <meta property="og:image" content="https://veldra.org/assets/brand/veldra-mark.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="/assets/style.css?v=14">
-  <script src="/assets/script.js?v=14" defer></script>
+  <link rel="stylesheet" href="/assets/style.css?v=15">
+  <script src="/assets/script.js?v=15" defer></script>
+  <script src="/assets/i18n.js?v=15" defer></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
 
   <style>
     /* ── Observe-specific styles ────────────────── */
@@ -836,13 +838,18 @@
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
         </a>
         <div class="navlinks">
-          <a href="/">Home</a>
-          <a href="/product/">Product</a>
-          <a href="/docs/">Docs</a>
-          <a href="/about/">About</a>
+          <a href="/" data-i18n="nav.home">Home</a>
+          <a href="/product/" data-i18n="nav.product">Product</a>
+          <a href="/docs/" data-i18n="nav.docs">Docs</a>
+          <a href="/about/" data-i18n="nav.about">About</a>
         </div>
         <div class="nav-actions">
-          <a href="/observe/" class="btn btn-primary btn-sm">Observe</a>
+          <div class="lang-toggle">
+            <button class="lang-btn active" data-lang="en">EN</button>
+            <button class="lang-btn" data-lang="es">ES</button>
+            <button class="lang-btn" data-lang="zh">中</button>
+          </div>
+          <a href="/observe/" class="btn btn-primary btn-sm" data-i18n="nav.observe">Observe</a>
         </div>
         <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 12h18M3 6h18M3 18h18"/></svg>
@@ -857,12 +864,12 @@
       <div class="hero-inner fade-up">
         <div class="hero-label">
           <span class="hero-label-dot"></span>
-          <span class="section-eyebrow" style="margin-bottom:0;">Observe Mode</span>
+          <span class="section-eyebrow" style="margin-bottom:0;" data-i18n="observe.hero.label">Observe Mode</span>
         </div>
-        <h1 class="hero-title" style="font-size:clamp(28px,4vw,48px);color:var(--ink);">
+        <h1 class="hero-title" style="font-size:clamp(28px,4vw,48px);color:var(--ink);" data-i18n="observe.hero.title" data-i18n-html="true">
           Gateway monitoring <span class="accent">dashboard</span>
         </h1>
-        <p class="hero-sub" style="color:var(--ink-muted);max-width:560px;margin:12px 0 0;">
+        <p class="hero-sub" style="color:var(--ink-muted);max-width:560px;margin:12px 0 0;" data-i18n="observe.hero.sub">
           Live share events, gateway metrics, reason code analytics, and policy state.
           Real-time insights into your SV2 deployment performance and health.
         </p>
@@ -877,8 +884,8 @@
 
         <!-- Login form (default view) -->
         <div id="auth-login-form">
-          <h2>Sign in to Observe Mode</h2>
-          <p class="sub">Access live template verdicts and rejection analytics.</p>
+          <h2 data-i18n="observe.auth.login_title">Sign in to Observe Mode</h2>
+          <p class="sub" data-i18n="observe.auth.login_sub">Access live template verdicts and rejection analytics.</p>
           <div id="login-msg" class="auth-msg"></div>
           <div class="auth-field">
             <label for="login-email">Email</label>
@@ -896,8 +903,8 @@
 
         <!-- Register form (toggled) -->
         <div id="auth-register-form" class="hidden">
-          <h2>Request Observe Access</h2>
-          <p class="sub">Submit your info for admin review. You'll receive an email when approved.</p>
+          <h2 data-i18n="observe.auth.register_title">Request Observe Access</h2>
+          <p class="sub" data-i18n="observe.auth.register_sub">Submit your info for admin review. You'll receive an email when approved.</p>
           <div id="register-msg" class="auth-msg"></div>
           <div class="auth-field">
             <label for="reg-name">Full name</label>
@@ -986,19 +993,19 @@
       <div class="observe-stats fade-up" id="stats-grid" style="animation-delay:.15s;">
         <div class="observe-stat">
           <div class="observe-stat-value" id="stat-total">--</div>
-          <div class="observe-stat-label">Total Verdicts</div>
+          <div class="observe-stat-label" data-i18n="observe.dash.total_verdicts">Total Verdicts</div>
         </div>
         <div class="observe-stat">
           <div class="observe-stat-value green" id="stat-accepted">--</div>
-          <div class="observe-stat-label">Accepted</div>
+          <div class="observe-stat-label" data-i18n="observe.dash.accepted">Accepted</div>
         </div>
         <div class="observe-stat">
           <div class="observe-stat-value red" id="stat-rejected">--</div>
-          <div class="observe-stat-label">Rejected</div>
+          <div class="observe-stat-label" data-i18n="observe.dash.rejected">Rejected</div>
         </div>
         <div class="observe-stat">
           <div class="observe-stat-value" id="stat-rate">--</div>
-          <div class="observe-stat-label">Accept Rate</div>
+          <div class="observe-stat-label" data-i18n="observe.dash.accept_rate">Accept Rate</div>
           <div class="observe-stat-sub" id="stat-rate-sub"></div>
         </div>
       </div>
@@ -1013,7 +1020,7 @@
         <!-- Verdict stream -->
         <div class="verdict-stream">
           <div class="verdict-stream-header">
-            Recent Verdicts
+            <span data-i18n="observe.dash.recent_verdicts">Recent Verdicts</span>
             <small id="verdict-count">0 loaded</small>
           </div>
           <div class="verdict-stream-body" id="verdict-list">
@@ -1032,7 +1039,7 @@
 
         <!-- Reason breakdown -->
         <div class="reason-panel">
-          <div class="reason-panel-header">Rejection Reasons</div>
+          <div class="reason-panel-header" data-i18n="observe.dash.rejection_reasons">Rejection Reasons</div>
           <div class="reason-chart" id="reason-chart">
             <div class="reason-empty">No rejection data yet</div>
           </div>
@@ -1047,7 +1054,7 @@
     <div class="container">
       <div class="safety-section fade-up" style="animation-delay:.22s;">
         <div class="safety-header">
-          Consensus Safety
+          <span data-i18n="observe.dash.consensus_safety">Consensus Safety</span>
           <small>from latest verdict</small>
         </div>
         <div class="safety-grid">
@@ -1083,9 +1090,9 @@
   <section class="section" style="padding-top:24px;">
     <div class="container">
       <div class="section-header fade-up" style="animation-delay:.25s;">
-        <span class="section-eyebrow">Fee Tiers</span>
-        <h2>Mempool-driven fee tier distribution</h2>
-        <p>Templates are evaluated against dynamic fee thresholds based on current mempool conditions.</p>
+        <span class="section-eyebrow" data-i18n="observe.tiers.eyebrow">Fee Tiers</span>
+        <h2 data-i18n="observe.tiers.title">Mempool-driven fee tier distribution</h2>
+        <p data-i18n="observe.tiers.sub">Templates are evaluated against dynamic fee thresholds based on current mempool conditions.</p>
       </div>
       <div class="tier-grid fade-up" style="animation-delay:.3s;">
         <div class="tier-card" id="tier-low">
@@ -1121,9 +1128,9 @@
   <section class="section section-alt">
     <div class="container">
       <div class="section-header fade-up">
-        <span class="section-eyebrow">Architecture</span>
-        <h2>System overview</h2>
-        <p>ReserveGrid OS sits between the Bitcoin node and the pool, verifying every block template against operator-defined policy.</p>
+        <span class="section-eyebrow" data-i18n="observe.arch.eyebrow">Architecture</span>
+        <h2 data-i18n="observe.arch.sys_title">System overview</h2>
+        <p data-i18n="observe.arch.sys_sub">ReserveGrid OS sits between the Bitcoin node and the pool, verifying every block template against operator-defined policy.</p>
       </div>
       <div class="arch-diagram fade-up" style="animation-delay:.1s;">
         <div class="arch-box">
@@ -1157,8 +1164,8 @@
   <section class="section">
     <div class="container">
       <div class="section-header fade-up">
-        <span class="section-eyebrow">Tech Stack</span>
-        <h2>Built for correctness and performance</h2>
+        <span class="section-eyebrow" data-i18n="observe.tech.eyebrow">Tech Stack</span>
+        <h2 data-i18n="observe.tech.stack_title">Built for correctness and performance</h2>
       </div>
       <div class="grid-4 fade-up" style="animation-delay:.1s;">
         <div class="card">
@@ -1189,9 +1196,9 @@
   <section class="section section-alt">
     <div class="container">
       <div class="section-header fade-up">
-        <span class="section-eyebrow">Reference</span>
-        <h2>Verdict reason code catalog</h2>
-        <p>Every rejection carries a canonical, machine-readable reason_code. These codes are stable across protocol, verifier, exports, and documentation.</p>
+        <span class="section-eyebrow" data-i18n="observe.catalog.eyebrow">Reference</span>
+        <h2 data-i18n="observe.catalog.title">Verdict reason code catalog</h2>
+        <p data-i18n="observe.catalog.sub">Every rejection carries a canonical, machine-readable reason_code. These codes are stable across protocol, verifier, exports, and documentation.</p>
       </div>
       <div class="table-wrap fade-up" style="animation-delay:.1s;">
         <table class="catalog-table">
@@ -1288,8 +1295,8 @@
   <section class="section">
     <div class="container">
       <div class="section-header fade-up">
-        <span class="section-eyebrow">How It Works</span>
-        <h2>Template verification flow</h2>
+        <span class="section-eyebrow" data-i18n="observe.flow.eyebrow">How It Works</span>
+        <h2 data-i18n="observe.flow.title">Template verification flow</h2>
       </div>
       <div class="flow-steps fade-up" style="animation-delay:.1s;">
         <div class="flow-step">
@@ -1324,36 +1331,36 @@
       <div class="footer-inner">
         <div class="footer-brand">
           <img src="/assets/brand/veldra-logo.png" alt="Veldra">
-          <p>Infrastructure for Bitcoin mining pool operators.</p>
+          <p data-i18n="footer.tagline">Infrastructure for Bitcoin mining pool operators.</p>
         </div>
         <div>
-          <h4>Product</h4>
+          <h4 data-i18n="footer.h_product">Product</h4>
           <div class="footer-links">
-            <a href="/product/">ReserveGrid OS</a>
-            <a href="/observe/">Observe Mode</a>
+            <a href="/product/" data-i18n="footer.reservegrid">ReserveGrid OS</a>
+            <a href="/observe/" data-i18n="footer.observe_mode">Observe Mode</a>
           </div>
         </div>
         <div>
-          <h4>Resources</h4>
+          <h4 data-i18n="footer.h_resources">Resources</h4>
           <div class="footer-links">
-            <a href="/docs/">Documentation</a>
+            <a href="/docs/" data-i18n="footer.documentation">Documentation</a>
           </div>
         </div>
         <div>
-          <h4>Company</h4>
+          <h4 data-i18n="footer.h_company">Company</h4>
           <div class="footer-links">
-            <a href="/about/">About</a>
-            <a href="mailto:jarrondeng@veldra.org">Contact</a>
+            <a href="/about/" data-i18n="footer.about">About</a>
+            <a href="mailto:jarrondeng@veldra.org" data-i18n="footer.contact">Contact</a>
           </div>
         </div>
 
       </div>
       <div class="footer-bottom">
-        <span>&copy; 2026 Veldra, Inc.</span>
+        <span data-i18n="footer.copyright">&copy; 2026 Veldra, Inc.</span>
         <div class="footer-legal">
-          <a href="/privacy/">Privacy</a>
-          <a href="/terms/">Terms</a>
-          <a href="/disclaimer/">Disclaimer</a>
+          <a href="/privacy/" data-i18n="footer.privacy">Privacy</a>
+          <a href="/terms/" data-i18n="footer.terms">Terms</a>
+          <a href="/disclaimer/" data-i18n="footer.disclaimer">Disclaimer</a>
         </div>
       </div>
     </div>
